--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>winnersPro — AI-backed soccer predictions</title>
-  <meta name="description" content="winnersPro — AI-backed soccer predictions. Daily, data-driven match insights delivered to web, WhatsApp or Telegram." />
+  <meta name="description" content="WinMastersAI — AI-backed soccer predictions. Daily, data-driven match insights delivered to web, WhatsApp or Telegram." />
   <!-- Tailwind via CDN for quick prototyping -->
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="theme-color" content="#4f46e5" />
@@ -13,7 +13,7 @@
   {
     "@context": "https://schema.org",
     "@type": "SportsBusiness",
-    "name": "winnersPro",
+    "name": "WinMastersAI",
     "url": "https://example.com",
     "description": "AI-backed soccer predictions with transparent performance reporting.",
     "sameAs": []
