--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
         <div class="p-6 bg-white rounded-lg shadow-sm">
           <div class="text-xl font-semibold">Free</div>
           <div class="mt-2 text-sm text-gray-600">Daily sample picks — great for testing the service.</div>
-          <div class="mt-4 font-bold">R0 / month</div>
+          <div class="mt-4 font-bold">R10 / weekly</div>
           <button class="mt-4 w-full px-4 py-2 border rounded">Get free</button>
         </div>
         <div class="p-6 bg-white rounded-lg shadow-sm border-2 border-[#D4AF37]">
           <div class="text-xl font-semibold">VIP</div>
           <div class="mt-2 text-sm text-gray-600">Full access to daily premium picks delivered to WhatsApp/Telegram.</div>
-          <div class="mt-4 font-bold">R199 / month</div>
+          <div class="mt-4 font-bold">R40 / monthly</div>
           <button class="mt-4 w-full px-4 py-2 btn-primary rounded">Start trial</button>
         </div>
         <div class="p-6 bg-white rounded-lg shadow-sm">
