--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background: linear-gradient(180deg, rgba(11,37,69,0.55) 0%, rgba(11,37,69,0.75) 100%);
     }
     .btn-primary {
-      background-color: #D4AF37; /* gold */
+      background-color: #228B22; /* gold */
       color: #0b2545; /* navy text */
     }
     .btn-primary:hover { filter: brightness(0.95); }
