--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
       <h1 class="text-3xl font-bold text-[#0b2545]">Pricing</h1>
       <div class="mt-6 grid md:grid-cols-3 gap-6">
         <div class="p-6 bg-white rounded-lg shadow-sm">
-          <div class="text-xl font-semibold">Free</div>
+          <div class="text-xl font-semibold">WEEKLY</div>
           <div class="mt-2 text-sm text-gray-600">Daily sample picks — great for testing the service.</div>
           <div class="mt-4 font-bold">R10 / weekly</div>
           <button class="mt-4 w-full px-4 py-2 border rounded">Get free</button>
         </div>
         <div class="p-6 bg-white rounded-lg shadow-sm border-2 border-[#D4AF37]">
-          <div class="text-xl font-semibold">VIP</div>
+          <div class="text-xl font-semibold">MONTHLY</div>
           <div class="mt-2 text-sm text-gray-600">Full access to daily premium picks delivered to WhatsApp/Telegram.</div>
           <div class="mt-4 font-bold">R40 / monthly</div>
           <button class="mt-4 w-full px-4 py-2 btn-primary rounded">Start trial</button>
